tests/samples/negative/core/ordinary_main_abi_name.ax
module ordinary_main_abi_name;

fn main() -> i32 @name("main") {
    return 0;
}
